prevent horizontal scrolling on iphone

--- a/dev/calc/style.css
+++ b/dev/calc/style.css
@@ -12,6 +12,7 @@ BODY {
 	padding: 0px;
 	margin: 0px;
 	width: 320px;
+	overflow: hidden;
 }
 
 #controls {
